--- a/src/Vitastic.Web/Vitastic.Web.csproj
+++ b/src/Vitastic.Web/Vitastic.Web.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastEndpoints.ClientGen" Version="5.6.0" />
+    <PackageReference Include="FastEndpoints.Swagger" Version="5.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />    
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
